added blogs html file

--- a/blog.html
+++ b/blog.html
@@ -8,21 +8,57 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-base-100 mx-20 mt-4">
-    <!-- Header Section -->
+    <!-- Navbar Section -->
     <header>
-      <section>
-        <div class="navbar bg-white shadow-sm">
+      <nav>
+        <div class="navbar bg-white shadow-sm rounded-lg">
           <div class="flex-none">
             <img src="./assets/logo.png" alt="" />
           </div>
           <div class="flex-1">
-            <a class="btn btn-ghost text-xl">DevBoard</a>
+            <a class="btn btn-ghost text-2xl gap-0">Dev<span class="font-bold">Board</span></a>
           </div>
           <div class="flex-none">
             <button class="btn bg-blue-800 text-white border-none">Back to Desk</button>
           </div>
         </div>
-      </section>
+      </nav>
     </header>
+    <!-- Main Section -->
+
+    <main>
+      <section class="my-5">
+        <div>
+          <h1 class="text-2xl font-bold text-center">Blogs</h1>
+          <div class="mt-5">
+            <div class="bg-base-100 border border-base-300 mt-3 p-3 rounded-lg shadow-sm">
+              <div class="font-semibold">Question-1:What are the different ways to select an element in the DOM</div>
+              <p class="text-slate-500">--------------------------------------------------------------------------------------------------------------------------------------------</p>
+              <div class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem enim ducimus illum error illo facere voluptatum sunt magnam placeat, sint nemo aperiam deleniti earum fugit magni repellendus atque eum.</div>
+            </div>
+            <div class="bg-base-100 border border-base-300 mt-3 p-3 rounded-lg shadow-sm">
+              <div class="font-semibold">Question-1:What are the different ways to select an element in the DOM</div>
+              <p class="text-slate-500">--------------------------------------------------------------------------------------------------------------------------------------------</p>
+              <div class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem enim ducimus illum error illo facere voluptatum sunt magnam placeat, sint nemo aperiam deleniti earum fugit magni repellendus atque eum.</div>
+            </div>
+            <div class="bg-base-100 border border-base-300 mt-3 p-3 rounded-lg shadow-sm">
+              <div class="font-semibold">Question-1:What are the different ways to select an element in the DOM</div>
+              <p class="text-slate-500">--------------------------------------------------------------------------------------------------------------------------------------------</p>
+              <div class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem enim ducimus illum error illo facere voluptatum sunt magnam placeat, sint nemo aperiam deleniti earum fugit magni repellendus atque eum.</div>
+            </div>
+            <div class="bg-base-100 border border-base-300 mt-3 p-3 rounded-lg shadow-sm">
+              <div class="font-semibold">Question-1:What are the different ways to select an element in the DOM</div>
+              <p class="text-slate-500">--------------------------------------------------------------------------------------------------------------------------------------------</p>
+              <div class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem enim ducimus illum error illo facere voluptatum sunt magnam placeat, sint nemo aperiam deleniti earum fugit magni repellendus atque eum.</div>
+            </div>
+            <div class="bg-base-100 border border-base-300 mt-3 p-3 rounded-lg shadow-sm">
+              <div class="font-semibold">Question-1:What are the different ways to select an element in the DOM</div>
+              <p class="text-slate-500">--------------------------------------------------------------------------------------------------------------------------------------------</p>
+              <div class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem enim ducimus illum error illo facere voluptatum sunt magnam placeat, sint nemo aperiam deleniti earum fugit magni repellendus atque eum.</div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
