added blogs JS file

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
             <a class="btn btn-ghost text-2xl gap-0">Dev<span class="font-bold">Board</span></a>
           </div>
           <div class="flex-none">
-            <button class="btn bg-blue-800 text-white border-none">Back to Desk</button>
+            <button id="back-btn" class="btn bg-blue-800 text-white border-none">Back to Desk</button>
           </div>
         </div>
       </nav>
@@ -60,5 +60,8 @@
         </div>
       </section>
     </main>
+
+    <!-- Blogs JS -->
+    <script src="./script/blogs.js"></script>
   </body>
 </html>
